Finish footer and completed page layout

--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,14 @@ td{
     padding-right: 30px;
     text-align: left;
 }
+
+.txtfooter{
+
+    color: #ffffff;
+    font-size: 20px;
+    margin-left: 10px;
+    margin-top: 0px;
+    padding-top: 10px;
+
+}
+
